[tool.poetry]
name = "hifi-gan-bwe"
version = "0.1.0"
description = ""
authors = ["Eliran Abdoo <eliran@riverside.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
torchaudio = "^2.3.0"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"
python-git = "^2018.2.1"
gitpython = "^3.1.43"
requests = "^2.31.0"
wandb = "^0.17.0"
s5cmd-facade-python = {git = "ssh://git@github.com/riversidefm/s5cmd-facade-python.git", tag="v2.0.2"}
librosa = "^0.10.2.post1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
